# venvWin

./: .gitignore  README.md  pyproject.toml
architecture/: product-doctrine.md
compatibility/: useful-windows-app-test-matrix.md
docs/: ai-extension-boundary.md  architecture.md  branding.md  filesystem-state.md  gui-vision.md  portable-live-boot.md  product-plan.md  product-voice.md  puppy-overlayfs-architecture.md  roadmap.md
tests/: test_bootstrap_contract.py  test_build_attempt_checklist_contract.py  test_capsule.py  test_dashboard.py  test_desktop.py  test_first_run.py  test_frontier_trail.py  test_gui_first_run.py  test_health.py  test_iso_desktop_launchers.py  test_open.py  test_open_routing.py  test_persistence.py  test_preflight_contract.py  test_readme_product_contract.py  test_runner.py  test_snapshot.py  test_state.py  test_usb_flash_guide_contract.py  test_wine_runner.py  test_workflow_contract.py  test_wsl_runner_contract.py
venvwin-app/: venvwin-app-roadmap.md
venvwin-portable/: README.md  audit-public-branding.sh  bootstrap-flash-ready-ubuntu.sh  build-all-profiles.sh  build-attempt-checklist.md  build-flash-ready-standard.sh  build-iso.sh  build-iteration-matrix.md  build-plan.md  compare-profiles.sh  debug-checklist.md  first-boot-product-gate.md  first-run.md  flash-ready-checklist.md  host-drive-guard.md  iso-test-plan.md  leave-no-trace.md  lightweight-target.md  local-flash-ready-build.md  package-profiles.md  persistence-usb.md  phone-build-status.md  pre-iso-readiness.sh  privacy-browser.md  product-gate.md  puppy-2011-benchmark.md  (+9 more)
(+68 files in other folders)
